have fixed broken style on add item popup

--- a/src/css/pages/monitoring.css
+++ b/src/css/pages/monitoring.css
@@ -894,13 +894,20 @@ page_monitoring_dashboard_dev {
 
 .page_monitoring_form_column_left {
     display: flex;
-    width: 7%;
+    width: 80px;
 
 }
 
 .page_monitoring_form_column_right {
     display: flex;
     width: 90%;
+
+}
+
+.page_monitoring_form_column_right2 {
+    display: flex;
+    width: 90%;
+    margin-left: -20px;
 
 }
 
